--- a/server/views/partials/backbone_templates.ejs
+++ b/server/views/partials/backbone_templates.ejs
@@ -1,11 +1,12 @@
-
 <script id='layout' type='text/x-handlebars-template'>
   <div class='navigation'>
   <ul>
     <li><a href='#' class='index'>All Links</a></li>
     <li><a href='#' class='create'>Shorten</a></li>
   </ul>
-  </div>
+
+    <a href='/logout' class='logout'>Logout</a>
+    </div>
   <div id='container'></div>
 </script>
 
